--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "esm": "^3.2.25",
+    "fs-extra": "^9.0.1",
     "markdown-pdf": "^10.0.0"
   },
   "scripts": {
